tdf#112484: repeat-item-labels is invalid in odf1.2 strict

Change-Id: I23d204ef3d4e466876bb3416d616dc1f3682ad4c
Reviewed-on: https://gerrit.libreoffice.org/65740
Tested-by: Jenkins
(cherry picked from commit 40a7e9c93855ac6cceb4c4189587998e21581de5)